# paper_to_podcast

./: .gitignore  2407.21783v2_script.txt  README.md  draft.ipynb  paper_to_podcast.py  pyproject.toml  requirements.txt  sequence.plantuml  templates.py
utils/: audio_gen.py  script.py
